# abc-example

./: .bazelrc  README.md  WORKSPACE  angular-metadata.tsconfig.json  package.json
e2e/: BUILD.bazel
src/: BUILD.bazel  app.component.html  app.component.ts  app.module.ts
src/hello-world/: BUILD.bazel  hello-world.component.ts  hello-world.module.ts
test/e2e/: BUILD.bazel
